--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<i class="fa-solid fa-play"></i>
+								<i class="fab fa-wolf-pack-battalion fa-3x" style="vertical-align: middle;"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
